添加忽略文件

--- a/tests/ThinkhomeLogger.NLog.tests/configs/nlog.config
+++ b/tests/ThinkhomeLogger.NLog.tests/configs/nlog.config
@@ -8,7 +8,7 @@
   <targets>
       <target name="thinkhome" xsi:type="File"
         fileName="${basedir}/wwwroot/logs/thinkhome/${shortdate}.log"
-        layout="${longdate} ${event-properties:item=context}"/> 
+        layout="${event-properties:item=context}"/> 
   </targets>
   <rules>
     <logger name="*" minlevel="Debug" maxlevel="Fatal" writeTo="thinkhome"/>
