--- a/src/ThinkhomeBootstrap/appsettings.json
+++ b/src/ThinkhomeBootstrap/appsettings.json
@@ -7,10 +7,10 @@
   },
   "Names": {
     "Name": "ryan",
-    "Value":32 
+    "value": 30
   },
   "ThinkhomeLogging": {
-    "IPAddress": "172.18.80.2",   //自定义IP地址 可选
+    "IPAddress": "172.18.80.1",   //自定义IP地址 可选
     "AppId": "thinkhome",         //自定义AppId  可选
     "ProgramId": "thinkhome-webapi",//自定义ProgramId 可选
     "Source": "11"                // 来源 可选
