--- a/src/thinkhomeLogger.NLog/ThinkhomeLogger.NLog.csproj
+++ b/src/thinkhomeLogger.NLog/ThinkhomeLogger.NLog.csproj
@@ -7,7 +7,8 @@
     <Authors>ryan chan</Authors>
     <Company>thinkhome</Company>
     <Product>thinkhome</Product>
-    <Version>1.0.3</Version>
+    <Version>1.0.4</Version>
+    <Description />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
