--- a/src/thinkhomeLogger.NLog/ThinkhomeLogger.NLog.csproj
+++ b/src/thinkhomeLogger.NLog/ThinkhomeLogger.NLog.csproj
@@ -8,10 +8,7 @@
     <Company>thinkhome</Company>
     <Product>thinkhome</Product>
     <Version>1.0.5</Version>
-    <Description>持续迭代
-1.0.5: 
-      1.输出模型中包含了subject内容
-      2.修复初始默认获取IP和MacAddress问题</Description>
+    <Description> </Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -20,6 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.7.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" /> 
