--- a/linglu/LingluBootstrap.Host/nlog.config
+++ b/linglu/LingluBootstrap.Host/nlog.config
@@ -15,7 +15,7 @@
 
   </targets>
   <rules>
-    <logger name="Linglu.Device*" minlevel="Info" maxlevel="Fatal" writeTo="console_runtime"></logger>
-    <logger name="LingluLogger*" minlevel="Info" maxlevel="Fatal" writeTo="console_audit"></logger>
+    <logger name="LingluBootstrap*" minlevel="Info" maxlevel="Fatal" writeTo="console_runtime"></logger>
+    <logger name="Linglu.Core*" minlevel="Info" maxlevel="Fatal" writeTo="console_audit"></logger>
   </rules>
 </nlog>
