1.支持utf-8内容输出 2.消息内容超2000将会自动截取

--- a/linglu/LingluBootstrap.Host/nlog.config
+++ b/linglu/LingluBootstrap.Host/nlog.config
@@ -12,10 +12,17 @@
          useDefaultRowHighlightingRules="false"
          layout="[MonitorLog]-${event-properties:item=context}">
     </target>
-
+    <target name="console_runtime_utf8" xsi:type="ColoredConsole"
+     useDefaultRowHighlightingRules="false"
+     layout="[MonitorLog]----${message}。 ${onexception:${exception:format=tostring}">
+    </target>
+    <target name="console_audit_utf8" xsi:type="ColoredConsole"
+                useDefaultRowHighlightingRules="false"
+                layout="[ApiLog]=${callsite}----${message}>>>>${onexception:${exception:format=tostring}">
+    </target>
   </targets>
   <rules>
-    <logger name="LingluBootstrap*" minlevel="Info" maxlevel="Fatal" writeTo="console_runtime"></logger>
-    <logger name="Linglu.Core*" minlevel="Info" maxlevel="Fatal" writeTo="console_audit"></logger>
+    <logger name="LingluBootstrap*" minlevel="Info" maxlevel="Fatal" writeTo="console_runtime_utf8"></logger>
+    <logger name="Linglu.Core*" minlevel="Info" maxlevel="Fatal" writeTo="console_audit_utf8"></logger>
   </rules>
 </nlog>
